# opencv_contrib

modules/dotnet/: CMakeLists.txt  GenerateProjects.bat  premake.lua
modules/dotnet/cmake/: ListUtils.cmake  UseCSharp.cmake
modules/dotnet/src/OpenCV/: OpenCV.sln
modules/dotnet/src/OpenCV.CLI/: OpenCV.CLI.lua  Stdafx.cpp
modules/dotnet/src/OpenCV.Examples.Core.Mat/: Program.cs
modules/dotnet/src/OpenCV.Examples.Core.Mat/Properties/: AssemblyInfo.cs
modules/dotnet/src/OpenCV.Generator/: OpenCV.Generator.lua  Program.cs
modules/dotnet/src/OpenCV.Generator/Passes/: FixIncludesPass.cs
modules/dotnet/src/OpenCV.Generator/Properties/: AssemblyInfo.cs
modules/dotnet/src/OpenCV.Generator/Types/: Complex.cs  VecX.cs
modules/dotnet/src/OpenCV/OpenCV.CLI/: AssemblyInfo.cpp  OpenCV.CLI.vcxproj  OpenCV.CLI.vcxproj.filters  ReadMe.txt
modules/dotnet/src/OpenCV/OpenCV.Examples.Core.Mat/: OpenCV.Examples.Core.Mat.csproj  Program.cs
modules/dotnet/src/OpenCV/OpenCV.Examples.Core.Mat/Properties/: AssemblyInfo.cs
modules/dotnet/src/OpenCV/OpenCV.Gen/: OpenCV.Gen.csproj  Program.cs
modules/dotnet/src/OpenCV/OpenCV.Gen/Passes/: FixIncludesPass.cs
modules/dotnet/src/OpenCV/OpenCV.Gen/Properties/: AssemblyInfo.cs
